# k-lingo-finetuning

./: .gitignore  main.py  migrate_repos.py  pyproject.toml  tuner.ipynb  tuner.py
data/: level1.jsonl  level2.jsonl  level3.jsonl  sample.jsonl
finetuning/: load_test.ipynb
